# pair-trading-project

./: .gitignore  Pair_Trading.py  Pair_Trading_v2.py  README.md  pyproject.toml
Pair_Trading/: pair_trading.py
app/: app.py
src/pair_trading_project/: __init__.py
trading/: Pair_Trading_Research.ipynb  pair_trading.py
