[project]
name = "pair-trading-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Charlie Hou", email = "yh4298@nyu.edu" }
]
dependencies = [
    "metaflow>=2.10.8",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "yfinance>=0.2.33",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.7.4",
    "statsmodels>=0.14.0",
    "tensorflow>=2.13.1",
    "streamlit>=1.29.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
